Added /userinfo endpoint
